bynkc/tests/fixtures/positive/111_auto_lift_simple/input.bynk
commons demo

fn pureAnswer(n: Int) -> Effect[Int] {
  n
}
