bynkc/tests/fixtures/negative/159_uninferable_type_arg/input.bynk
commons bad

fn first_of[A](x: Int) -> A {
  identity_helper(x)
}

fn identity_helper[A](x: A) -> A {
  x
}

fn misuse() -> Int {
  first_of(5)
}
